Enum Role {
  ADMIN
  EDITOR
  VIEWER
}

Enum visibility_level {
  public
  private
  link_only
}

Table users {
  id String [pk, note: 'Primary key (UUIDv7)']
  email String [unique, not null, note: 'Unique login email']
  name String [not null, note: 'Display name']
  role Role [default: 'VIEWER', not null]
  interests String[] [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  Note: '''Application user. Fully annotated for every validator generator,
with a UUIDv7 primary key, enum default, scalar list, @map columns,
@updatedAt, and relations of every cardinality.'''
}

Table Profile {
  id String [pk]
  user_id String [unique, not null]
  bio String
  nickname String [default: 'anonymous', not null]
  age Int
  balance Decimal [default: 0, not null]
  verified Boolean [default: false, not null]
  meta Json
  avatar Bytes
  last_seen DateTime

  Note: '''One-to-one relation with native @db.* types, literal defaults,
and optional scalars of every flavour. ConfigDict passthrough: the
Pydantic model rejects unknown keys (extra=\'forbid\').'''
}

Table posts {
  id String [pk, note: 'Primary key']
  title String [not null, note: 'Article title']
  content String
  visibility visibility_level [default: 'link_only', not null]
  published Boolean [default: false, not null]
  view_count Int [default: 0, not null]
  author_id String [not null]
  created_at DateTime [default: `now()`, not null]

  Note: '''@@map + @map column names, FK with a referential action,
mapped-enum default, and an implicit many-to-many to Tag.'''
}

Table Tag {
  id Int [pk, increment]
  label String [unique, not null]

  Note: 'Implicit many-to-many partner of Post (join table `_PostToTag`).'
}

Table comments {
  id Int [pk, increment]
  body String [not null]
  post_id String [not null]
  author_id String
  created_at DateTime [default: `now()`, not null]

  Note: '''Two foreign keys with different referential actions
(Cascade vs SetNull) and a composite index.'''
}

Table follows {
  follower_id String [not null]
  following_id String [not null]
  since DateTime [default: `now()`, not null]

  indexes {
    (follower_id, following_id) [pk]
  }

  Note: 'Composite primary key + two named relations to the same model.'
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  parent_id Int

  indexes {
    (parent_id, name) [unique]
  }

  Note: 'Self-relation (adjacency-list tree) with a composite unique.'
}

Table orders {
  id BigInt [pk, increment]
  user_id String [not null]
  total Decimal [not null]
  placed_at DateTime [default: `now()`, not null]

  Note: 'BigInt autoincrement primary key (bigserial) and money as Decimal.'
}

Table order_items {
  id BigInt [pk, increment]
  order_id BigInt [not null]
  sku String [not null]
  qty Int [default: 1, not null]
  price Decimal [not null]

  indexes {
    (order_id, sku) [unique]
  }

  Note: 'Child of Order with a composite unique constraint.'
}

Table audit_logs {
  id String [pk]
  action String [not null]
  payload Json [default: '{}', not null]
  signature Bytes
  logged_at DateTime [not null]

  Note: 'DB-side generated defaults (dbgenerated) plus Json / Bytes payloads.'
}

Table Actor {
  id Int [pk, increment]
  name String [not null]

  Note: '''Named implicit many-to-many: the join table is `_cast`,
not `_ActorToFilm`.'''
}

Table Film {
  id Int [pk, increment]
  title String [not null]
}

Ref Profile_user_id_fk: Profile.user_id - users.id [delete: cascade]

Ref posts_author_id_fk: posts.author_id > users.id [delete: cascade]

Ref comments_post_id_fk: comments.post_id > posts.id [delete: cascade]

Ref comments_author_id_fk: comments.author_id > users.id [delete: set null]

Ref follows_follower_id_fk: follows.follower_id > users.id [delete: cascade]

Ref follows_following_id_fk: follows.following_id > users.id [delete: cascade]

Ref Category_parent_id_fk: Category.parent_id > Category.id

Ref orders_user_id_fk: orders.user_id > users.id

Ref order_items_order_id_fk: order_items.order_id > orders.id [delete: cascade]